# mal

./: Makefile.impls
impls/c++/src/: CMakeLists.txt  README.org  core.cpp  core.h  env.cpp  env.h  exception.h  printer.cpp  printer.h  procedure.cpp  procedure.h  reader.cpp  reader.h  special_form.cpp  special_form.h  step0_repl.cpp  step1_read_print.cpp  step2_eval.cpp  step3_env.cpp  step4_if_fn_do.cpp  step6_file.cpp  step7_quote.cpp  step8_macros.cpp  todo.org  types.cpp  types.h
impls/myjulia/: step0_repl.jl
impls/tests/: step5_tco.mal
